changes in .top style

--- a/project/bookkeeping/templates/bookkeeping/includes/accounts_worth_list.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/accounts_worth_list.html
@@ -2,8 +2,8 @@
 
 <table class="table table-striped table-hover stats">
     <thead class="thead-light">
-        <tr>
-            <th colspan="7" class="top"><h1>Sąskaitos</h1></th>
+        <tr class="top">
+            <th colspan="7"><h1>Sąskaitos</h1></th>
         </tr>
         <tr>
             <th class="text-left">Sąskaita</th>
