--- a/project/bookkeeping/templates/bookkeeping/includes/months_expense_type.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/months_expense_type.html
@@ -2,8 +2,8 @@
 
 <table class="table table-striped table-hover table-sm stats">
     <thead class="thead-light">
-        <tr>
-            <th colspan="{{ expense_types|length|add:1 }}" class="top"><h1>Išlaidų statistika</h1></th>
+        <tr class="top">
+            <th colspan="{{ expense_types|length|add:1 }}"><h1>Išlaidų statistika</h1></th>
             <th class="bl top"></th>
         </tr>
         <tr>
