--- a/project/bookkeeping/templates/bookkeeping/includes/savings_worth_table.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/savings_worth_table.html
@@ -2,13 +2,13 @@
 
 <table class="table table-striped table-hover stats">
     <thead class="thead-light">
-        <tr>
-            <th colspan="7" rowspan="2" class="top br">{% if label %}<h1>{{ label }}</h1>{% endif %}</th>
-            <th colspan="4" class="text-center top">Pelnas/Nuostolis</th>
+        <tr class="top">
+            <th colspan="7" rowspan="2" class="br">{% if label %}<h1>{{ label }}</h1>{% endif %}</th>
+            <th colspan="4" class="text-center">Pelnas/Nuostolis</th>
         </tr>
-        <tr>
-            <th colspan="2" class="text-center top br_s">Pervesta</th>
-            <th colspan="2" class="text-center top">Pirkta</th>
+        <tr class="top">
+            <th colspan="2" class="text-center br_s">Pervesta</th>
+            <th colspan="2" class="text-center">Pirkta</th>
         </tr>
         <tr>
             <th class="text-left">Fondas</th>
