--- a/project/bookkeeping/templates/bookkeeping/includes/months_balance.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/months_balance.html
@@ -1,8 +1,8 @@
 {% load table_cell %}
 <table class="table table-striped table-hover table-sm stats">
     <thead class="thead-light">
-        <tr>
-            <th colspan="5" class="top"><h1>Balansas</h1></th>
+        <tr class="top">
+            <th colspan="5"><h1>Balansas</h1></th>
         </tr>
         <tr>
             <th width="80rem" class="text-left">{{ request.user.profile.year|title }}</th>
