--- a/project/expenses/templates/expenses/includes/expenses_list.html
+++ b/project/expenses/templates/expenses/includes/expenses_list.html
@@ -1,23 +1,25 @@
 {% load humanize %}
-<table class="table table-striped table-hover">
+<table class="table table-striped table-hover stats">
     <thead class="thead-light">
-        <th>Data</th>
-        <th>Išlaidų rūšis</th>
-        <th>Išlaidų pavadinimas</th>
-        <th class="text-right">Kiekis</th>
-        <th class="text-right">Kaina</th>
-        <th class="text-right">Sąskaita</th>
+        <tr class="top">
+            <th>Data</th>
+            <th>Išlaidų rūšis</th>
+            <th>Išlaidų pavadinimas</th>
+            <th class="text-right">Kiekis</th>
+            <th class="text-right">Kaina</th>
+            <th class="text-right">Sąskaita</th>
+        </tr>
     </thead>
     <tbody>
         {% for item in items %}
         {% url 'expenses:expenses_update' item.id as url_update %}
         <tr data-url="{{ url_update }}">
-            <td>{{ item.date|date:"Y-m-d" }}</td>
-            <td>{{ item.expense_type }}</td>
-            <td>{{ item.expense_name }}</td>
-            <td class="text-right">{{ item.quantity }}</td>
-            <td class="text-right" {% if item.remark %}data-toggle="tooltip" data-html="true" data-placement="right" title="{{ item.remark|linebreaks}}" style="border-right: 5px solid lightgreen;"{% endif %}>{{ item.price|intcomma }}</td>
-            <td class="text-right" {% if item.exception %} style="border-right: 5px solid red;"{% endif %}>{{ item.account }}</td>
+            <td class="text-left">{{ item.date|date:"Y-m-d" }}</td>
+            <td class="text-left">{{ item.expense_type }}</td>
+            <td class="text-left">{{ item.expense_name }}</td>
+            <td>{{ item.quantity }}</td>
+            <td {% if item.remark %}data-toggle="tooltip" data-html="true" data-placement="right" title="{{ item.remark|linebreaks}}" style="border-right: 5px solid lightgreen!important;"{% endif %}>{{ item.price|intcomma }}</td>
+            <td {% if item.exception %} style="border-right: 5px solid red!important;"{% endif %}>{{ item.account }}</td>
         </tr>
         {% empty %}
         <tr class="table-warning text-center">
