--- a/project/incomes/templates/incomes/includes/incomes_list.html
+++ b/project/incomes/templates/incomes/includes/incomes_list.html
@@ -1,21 +1,23 @@
 {% load humanize %}
-<table class="table table-striped table-hover">
+<table class="table table-striped table-hover stats">
     <thead class="thead-light">
-        <th>Data</th>
-        <th>Pajamų rūšis</th>
-        <th>Sąskaita</th>
-        <th>Pastaba</th>
-        <th class="text-right">Suma</th>
+        <tr class="top">
+            <th>Data</th>
+            <th>Pajamų rūšis</th>
+            <th>Sąskaita</th>
+            <th>Pastaba</th>
+            <th class="text-right">Suma</th>
+        </tr>
     </thead>
     <tbody>
         {% for item in items %}
         {% url 'incomes:incomes_update' item.id as url_update %}
         <tr data-url="{{ url_update }}">
-            <td>{{ item.date|date:"Y-m-d" }}</td>
-            <td>{{ item.income_type }}</td>
-            <td>{{ item.account }}</td>
-            <td>{{ item.remark }}</td>
-            <td class="text-right">{{ item.price|intcomma }}</td>
+            <td class="text-left">{{ item.date|date:"Y-m-d" }}</td>
+            <td class="text-left">{{ item.income_type }}</td>
+            <td class="text-left">{{ item.account }}</td>
+            <td class="text-left">{{ item.remark }}</td>
+            <td>{{ item.price|intcomma }}</td>
         </tr>
         {% empty %}
         <tr class="table-warning text-center">
