--- a/project/transactions/templates/transactions/includes/table.html
+++ b/project/transactions/templates/transactions/includes/table.html
@@ -1,20 +1,22 @@
-<table class="table table-striped table-hover">
+<table class="table table-striped table-hover stats">
     <thead class="thead-light">
-        <th>Data</th>
-        <th>Iš sąskaitos</th>
-        <th>Į sąskaitą</th>
-        <th class="text-right">Suma</th>
-        {% if fees %}<th class="text-right">Mokesčiai</th>{% endif %}
+        <tr class="top">
+            <th>Data</th>
+            <th>Iš sąskaitos</th>
+            <th>Į sąskaitą</th>
+            <th class="text-right">Suma</th>
+            {% if fees %}<th class="text-right">Mokesčiai</th>{% endif %}
+        </tr>
     </thead>
     <tbody>
         {% for item in items %}
         {% url url_name item.id as url %}
         <tr data-url="{{ url }}">
-            <td>{{ item.date|date:"Y-m-d" }}</td>
-            <td>{{ item.from_account }}</td>
-            <td>{{ item.to_account }}</td>
-            <td class="text-right">{{ item.price }}</td>
-            {% if fees %}<td class="text-right">{{ item.fee }}</td>{% endif %}
+            <td class="text-left">{{ item.date|date:"Y-m-d" }}</td>
+            <td class="text-left">{{ item.from_account }}</td>
+            <td class="text-left">{{ item.to_account }}</td>
+            <td>{{ item.price }}</td>
+            {% if fees %}<td>{{ item.fee }}</td>{% endif %}
         </tr>
         {% empty %}
         <tr class="table-warning text-center">
