--- a/project/savings/templates/savings/includes/savings_list.html
+++ b/project/savings/templates/savings/includes/savings_list.html
@@ -1,23 +1,25 @@
 {% load humanize %}
-<table class="table table-striped table-hover">
+<table class="table table-striped table-hover stats">
     <thead class="thead-light">
-        <th>Data</th>
-        <th>Fondas</th>
-        <th>Iš sąskaitos</th>
-        <th>Pastaba</th>
-        <th class="text-right">Suma</th>
-        <th class="text-right">Mokesčiai</th>
+        <tr class="top">
+            <th>Data</th>
+            <th>Fondas</th>
+            <th>Iš sąskaitos</th>
+            <th>Pastaba</th>
+            <th class="text-right">Suma</th>
+            <th class="text-right">Mokesčiai</th>
+        </tr>
     </thead>
     <tbody>
         {% for item in items %}
         {% url 'savings:savings_update' item.id as url_update %}
         <tr data-url="{{ url_update }}">
-            <td>{{ item.date|date:"Y-m-d" }}</td>
-            <td>{{ item.saving_type }}</td>
-            <td>{{ item.account }}</td>
-            <td>{{ item.remark }}</td>
-            <td class="text-right">{{ item.price|intcomma }}</td>
-            <td class="text-right">{{ item.fee|intcomma }}</td>
+            <td class="text-left">{{ item.date|date:"Y-m-d" }}</td>
+            <td class="text-left">{{ item.saving_type }}</td>
+            <td class="text-left">{{ item.account }}</td>
+            <td class="text-left">{{ item.remark }}</td>
+            <td>{{ item.price|intcomma }}</td>
+            <td>{{ item.fee|default_if_none:'-'|intcomma }}</td>
         </tr>
         {% empty %}
         <tr class="table-warning text-center">
