--- a/project/drinks/templates/drinks/index.html
+++ b/project/drinks/templates/drinks/index.html
@@ -10,7 +10,7 @@
 
 {% url 'drinks:drinks_new' as url_drinks %}
 <div class="row mt-2">
-    <div class="col-lg-12">
+    <div class="col-lg-2">
         <div class="row mt-2">
             <div class="col-lg-12 text-right">
                 <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_drinks }}"><i class="fas fa-plus"></i> Įrašą</button>
@@ -20,6 +20,8 @@
             <div id="ajax-content" class="col-lg-12 dblclick">{% include 'drinks/includes/drinks_list.html' %}</div>
         </div>
     </div>
+
+    <div class="col-lg-10"></div>
 </div>
 
 {% include 'modal.html' %}
