--- a/project/bookkeeping/templates/bookkeeping/month.html
+++ b/project/bookkeeping/templates/bookkeeping/month.html
@@ -8,4 +8,14 @@
 
 {% block content %}
 
+<div class="row my-2">
+    <div class="col-lg-12">
+        {% with request.user.profile.month as month %}
+        {% for m in month_list %}
+        {% with m|date:'n' as m_num %}
+        <a href="{% url 'core:set_month' m_num  %}" class="btn btn-sm mr-1 px-3 {% if month|slugify == m_num %}btn-primary{% else %}btn-secondary{% endif %}">{{ m|date:'F'|title }}</a>
+        {% endwith %}{% endfor %}{% endwith %}
+    </div>
+</div>
+
 {% endblock content%}
