--- a/project/bookkeeping/templates/bookkeeping/month.html
+++ b/project/bookkeeping/templates/bookkeeping/month.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load table_cell %}
+{% load table_cell %}{% load template_filters %}
 
 {% block head %}
 <script src="https://code.highcharts.com/highcharts.src.js"></script>
@@ -7,6 +7,31 @@
 
 
 {% block content %}
+<div class="row my-2">
+    <div class="col-lg-6">
+        <table class="table table-striped table-hover stats">
+            <thead class="thead-light">
+                <tr class="top">
+                    <th></th>
+                    {% for cat in expense_types %}<th class="text-right">{{ cat }}</th>{% endfor %}
+                </tr>
+            </thead>
+            <tbody>
+                {% for row in expenses %}
+                <tr {% if day|slugify == row.date|date:'j' %}class="bg-warning"{% endif %}>
+                    <td>{{ row.date|date:'d' }}</td>
+                    {% for cat in expense_types %}
+                    {% cell row|get_item:cat %}
+                    {% endfor %}
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+    <div class="col-lg-6">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores, itaque eaque quaerat ratione nulla nesciunt vero qui tenetur quos placeat ullam facere non assumenda expedita consequatur illum, quam error. Id.
+    </div>
+</div>
 
 <div class="row my-2">
     <div class="col-lg-12">
