savings title column width

--- a/project/bookkeeping/templates/bookkeeping/includes/savings_worth_table.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/savings_worth_table.html
@@ -11,7 +11,7 @@
             <th colspan="2" class="text-center">Pirkta</th>
         </tr>
         <tr>
-            <th class="text-left">Fondas</th>
+            <th class="text-left" width="130rem">Fondas</th>
             <th>01.01 pevesta</th>
             <th>01.01 mokesčiai</th>
             <th>Pervesta</th>
