--- a/project/bookkeeping/templates/bookkeeping/index.html
+++ b/project/bookkeeping/templates/bookkeeping/index.html
@@ -52,7 +52,7 @@
             <tfoot>
                 <tr>
                     {% cell amount_start tag='th' %}
-                    {% cell amount_end tag='th' %}
+                    {% cell months_amount_end tag='th' %}
                     {% cell amount_balance tag='th' highlight_value=True %}
                 </tr>
             </tfoot>
