round values before cheeking for equality

--- a/project/bookkeeping/templates/bookkeeping/includes/months_balance.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/months_balance.html
@@ -36,7 +36,7 @@
             {% cell balance_totals.incomes tag='th' %}
             {% cell balance_totals.expenses tag='th' %}
             {% cell balance_totals.balance tag='th' highlight_value=True %}
-            {% if accounts_amount_end != months_amount_end %}{% cell months_amount_end tag="th" css_class='bad' text_before='!' text_after='!' %}{% else %}{% cell months_amount_end tag='th' highlight_value=True %}{% endif %}
+            {% if accounts_amount_end|floatformat:2 != months_amount_end|floatformat:2 %}{% cell months_amount_end tag="th" css_class='bad' text_before='!' text_after='!' %}{% else %}{% cell months_amount_end tag='th' highlight_value=True %}{% endif %}
         </tr>
     </tfoot>
 </table>
