--- a/project/bookkeeping/templates/bookkeeping/month.html
+++ b/project/bookkeeping/templates/bookkeeping/month.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load table_cell %}{% load template_filters %}
+{% load table_cell %}{% load template_filters %}{% load cell_format %}
 
 {% block head %}
 <script src="https://code.highcharts.com/highcharts.src.js"></script>
@@ -41,41 +41,15 @@
         <table class="table table-striped table-hover stats">
             <thead class="thead-light">
                 <tr class="top">
-                    <th>Diena</th>
-                    <th>Viso</th>
+                    <th class="text-right">Diena</th>
+                    <th class="text-right">Viso</th>
                 </tr>
             </thead>
             <tbody>
-                <tr><td>123.00</td><td>123.002</td></tr>
-                <tr><td>123.00</td><td>123.002</td></tr>
-                <tr><td>123.00</td><td>123.002</td></tr>
-                <tr><td>123.00</td><td>123.002</td></tr>
-                <tr><td>123.00</td><td>123.002</td></tr>
-                <tr><td>123.00</td><td>123.002</td></tr>
-                <tr><td>123.00</td><td>123.002</td></tr>
-                <tr><td>123.00</td><td>123.002</td></tr>
-                <tr><td>123.00</td><td>123.002</td></tr>
-                <tr><td>123.00</td><td>123.002</td></tr>
-                <tr><td>123.00</td><td>123.002</td></tr>
-                <tr><td>123.00</td><td>123.002</td></tr>
-                <tr><td>123.00</td><td>123.002</td></tr>
-                <tr><td>123.00</td><td>123.002</td></tr>
-                <tr><td>123.00</td><td>123.002</td></tr>
-                <tr><td>123.00</td><td>123.002</td></tr>
-                <tr><td>123.00</td><td>123.002</td></tr>
-                <tr><td>123.00</td><td>123.002</td></tr>
-                <tr><td>123.00</td><td>123.002</td></tr>
-                <tr><td>123.00</td><td>123.002</td></tr>
-                <tr><td>123.00</td><td>123.002</td></tr>
-                <tr><td>123.00</td><td>123.002</td></tr>
-                <tr><td>123.00</td><td>123.002</td></tr>
-                <tr><td>123.00</td><td>123.002</td></tr>
-                <tr><td>123.00</td><td>123.002</td></tr>
-                <tr><td>123.00</td><td>123.002</td></tr>
-                <tr><td>123.00</td><td>123.002</td></tr>
-                <tr><td>123.00</td><td>123.002</td></tr>
-                <tr><td>123.00</td><td>123.002</td></tr>
-                <tr><td>123.00</td><td>123.002</td></tr>
+                {% for row in spending_table %}
+                {% with row.day|negative as neg %}
+                <tr {% if day|slugify == row.date|date:'j' %}class="bg-warning"{% endif %}>{% cell row.day css_class=row.day|negative %}{% cell row.full css_class=row.full|negative|add:' -full' %}</tr>
+                {% endwith %}{% endfor %}
             </tbody>
         </table>
     </div>
@@ -95,4 +69,13 @@
     </div>
 </div>
 
-{% endblock content%} 
+<style>
+    .table-danger {
+        font-weight: bold;
+    }
+    .table-danger.-full {
+        background-color: red!important;
+        font-weight: bold;
+    }
+</style>
+{% endblock content%}
