--- a/project/bookkeeping/templates/bookkeeping/month.html
+++ b/project/bookkeeping/templates/bookkeeping/month.html
@@ -74,7 +74,7 @@
         font-weight: bold;
     }
     .table-danger.-full {
-        background-color: red!important;
+        background-color: #fe536a;
         font-weight: bold;
     }
 </style>
