--- a/project/bookkeeping/templates/bookkeeping/month.html
+++ b/project/bookkeeping/templates/bookkeeping/month.html
@@ -1,5 +1,4 @@
 {% extends 'base.html' %}
-{% load table_cell %}{% load template_filters %}{% load cell_format %}
 
 {% block head %}
 <script src="https://code.highcharts.com/highcharts.src.js"></script>
@@ -9,49 +8,10 @@
 {% block content %}
 <div class="row my-2">
     <div class="col-md-6 table-responsive">
-        <table class="table table-striped table-hover stats">
-            <thead class="thead-light">
-                <tr class="top">
-                    <th></th>
-                    {% for cat in expense_types %}<th class="text-right" data-toggle="tooltip" data-placement="bottom" title="{{ cat }}">{{ cat|truncatechars:8 }}</th>{% endfor %}
-                    <th class="bl text-right">Viso</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for row in expenses %}
-                <tr {% if day|slugify == row.date|date:'j' %}class="bg-warning"{% endif %}>
-                    <td>{{ row.date|date:'d' }}</td>
-                    {% for cat in expense_types %}
-                    {% cell row|get_item:cat %}
-                    {% endfor %}
-                    {% cell row.total css_class="bl" %}
-                </tr>
-                {% endfor %}
-            </tbody>
-            <tfoot>
-                <tr class="total">
-                    <th class="text-left">Viso</th>
-                    {% for cat in expense_types %}{% cell totals|get_item:cat tag='th' %}{% endfor %}
-                    {% cell totals.total tag='th' css_class="bl" %}
-                </tr>
-            </tfoot>
-        </table>
+        {% include 'bookkeeping/includes/month_balance.html' %}
     </div>
     <div class="col-md-1">
-        <table class="table table-striped table-hover stats">
-            <thead class="thead-light">
-                <tr class="top">
-                    <th class="text-right">Diena</th>
-                    <th class="text-right">Viso</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for row in spending_table %}
-                {% with row.day|negative as neg %}
-                <tr {% if day|slugify == row.date|date:'j' %}class="bg-warning"{% endif %}>{% cell row.day css_class=row.day|negative %}{% cell row.full css_class=row.full|negative|add:' -full' %}</tr>
-                {% endwith %}{% endfor %}
-            </tbody>
-        </table>
+        {% include 'bookkeeping/includes/month_day_spending.html' %}
     </div>
     <div class="col-md-4">
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores, itaque eaque quaerat ratione nulla nesciunt vero qui
@@ -60,7 +20,7 @@
 </div>
 
 <div class="row my-2">
-    <div class="col-lg-123.00">
+    <div class="col-lg-12">
         {% with request.user.profile.month as month %}
         {% for m in month_list %}
         {% with m|date:'n' as m_num %}
@@ -69,13 +29,4 @@
     </div>
 </div>
 
-<style>
-    .table-danger {
-        font-weight: bold;
-    }
-    .table-danger.-full {
-        background-color: #fe536a;
-        font-weight: bold;
-    }
-</style>
 {% endblock content%}
