--- a/project/bookkeeping/templates/bookkeeping/month.html
+++ b/project/bookkeeping/templates/bookkeeping/month.html
@@ -16,6 +16,11 @@
     <div class="col-md-4">
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores, itaque eaque quaerat ratione nulla nesciunt vero qui
         tenetur quos placeat ullam facere non assumenda expedita consequatur illum, quam error. Id.
+        <div class="row">
+            <div class="col-lg-12">
+                {% include 'bookkeeping/includes/month_spending_info.html' %}
+            </div>
+        </div>
     </div>
 </div>
 
