--- a/project/bookkeeping/templates/bookkeeping/includes/month_day_spending.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/month_day_spending.html
@@ -3,6 +3,7 @@
 <table class="table table-striped table-hover stats">
     <thead class="thead-light">
         <tr class="top">
+            <th></th>
             <th class="text-right">Diena</th>
             <th class="text-right">Viso</th>
         </tr>
@@ -11,6 +12,7 @@
         {% for row in spending_table %}
         {% with row.day|negative as neg %}
         <tr {% if day|slugify == row.date|date:'j' %}class="bg-warning" {% endif %}>
+            {% with row.date|date:'w' as weekend %}<td class="text-left {% if weekend == '0' or weekend == '6' %}weekend{% endif %}">{{ row.date|date:'l' }}</td>{% endwith %}
             {% cell row.day css_class=row.day|negative %}{% cell row.full css_class=row.full|negative|add:' -full' %}
         </tr>
         {% endwith %}{% endfor %}
@@ -24,5 +26,8 @@
     .table-danger.-full {
         background-color: #fe536a;
         font-weight: bold;
+    }
+    .weekend {
+        background-color: lightsalmon;
     }
 </style>
