--- a/project/bookkeeping/templates/bookkeeping/month.html
+++ b/project/bookkeeping/templates/bookkeeping/month.html
@@ -7,18 +7,22 @@
 
 {% block content %}
 <div class="row my-2">
-    <div class="col-md-6 table-responsive">
+    <div class="col-md-6 mr-0 pr-0 table-responsive">
         {% include 'bookkeeping/includes/month_balance.html' %}
     </div>
-    <div class="col-md-1">
-        {% include 'bookkeeping/includes/month_day_spending.html' %}
-    </div>
-    <div class="col-md-4">
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores, itaque eaque quaerat ratione nulla nesciunt vero qui
-        tenetur quos placeat ullam facere non assumenda expedita consequatur illum, quam error. Id.
+    <div class="col-md-6">
         <div class="row">
-            <div class="col-lg-12">
-                {% include 'bookkeeping/includes/month_spending_info.html' %}
+            <div class="col-md-3 mx-0 px-2">
+                {% include 'bookkeeping/includes/month_day_spending.html' %}
+            </div>
+            <div class="col-md-9 pl-0">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores, itaque eaque quaerat ratione nulla nesciunt vero qui
+                tenetur quos placeat ullam facere non assumenda expedita consequatur illum, quam error. Id.
+                <div class="row">
+                    <div class="col-lg-12">
+                        {% include 'bookkeeping/includes/month_spending_info.html' %}
+                    </div>
+                </div>
             </div>
         </div>
     </div>
