--- a/project/bookkeeping/templates/bookkeeping/includes/month_balance.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/month_balance.html
@@ -11,7 +11,7 @@
     <tbody>
         {% for row in expenses %}
         <tr {% if day|slugify == row.date|date:'j' %}class="bg-warning" {% endif %}>
-            <td>{{ row.date|date:'d' }}</td>
+            <td class="text-left">{{ row.date|date:'d' }}</td>
             {% for cat in expense_types %}
             {% cell row|get_item:cat %}
             {% endfor %}
@@ -21,7 +21,7 @@
     </tbody>
     <tfoot>
         <tr class="total">
-            <th class="text-left">Viso</th>
+            <th class="text-left">&#8721;</th>
             {% for cat in expense_types %}{% cell totals|get_item:cat tag='th' %}{% endfor %}
             {% cell totals.total tag='th' css_class="bl" %}
         </tr>
