incomes in month_spending_info

--- a/project/bookkeeping/templates/bookkeeping/includes/month_spending_info.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/month_spending_info.html
@@ -11,8 +11,8 @@
     <tbody>
         <tr>
             <td>Pajamos</td>
-            <td></td>
-            <td class=""></td>
+            <td>{{ plan_incomes|floatformat:2 }}</td>
+            <td class="{{ fact_incomes|compare:plan_incomes }}">{{ fact_incomes|floatformat:2 }}</td>
         </tr>
         <tr>
             <td>Pinigai dienai</td>
