--- a/project/plans/templates/plans/includes/generic_list.html
+++ b/project/plans/templates/plans/includes/generic_list.html
@@ -3,18 +3,18 @@
     <thead class="thead-light">
         <tr class="top">
             <th>Pavadinimas</th>
-            <th class="text-right">Sausis</th>
-            <th class="text-right">Vasaris</th>
-            <th class="text-right">Kovas</th>
-            <th class="text-right">Balandis</th>
-            <th class="text-right">Gegužė</th>
-            <th class="text-right">Birželis</th>
-            <th class="text-right">Liepa</th>
-            <th class="text-right">Rugpjūtis</th>
-            <th class="text-right">Rugsėjis</th>
-            <th class="text-right">Spalis</th>
-            <th class="text-right">Lapkritis</th>
-            <th class="text-right">Gruodis</th>
+            <th class="text-right" width="7.5%">Sausis</th>
+            <th class="text-right" width="7.5%">Vasaris</th>
+            <th class="text-right" width="7.5%">Kovas</th>
+            <th class="text-right" width="7.5%">Balandis</th>
+            <th class="text-right" width="7.5%">Gegužė</th>
+            <th class="text-right" width="7.5%">Birželis</th>
+            <th class="text-right" width="7.5%">Liepa</th>
+            <th class="text-right" width="7.5%">Rugpjūtis</th>
+            <th class="text-right" width="7.5%">Rugsėjis</th>
+            <th class="text-right" width="7.5%">Spalis</th>
+            <th class="text-right" width="7.5%">Lapkritis</th>
+            <th class="text-right" width="7.5%">Gruodis</th>
         </tr>
     </thead>
     <tbody>
