--- a/project/plans/templates/plans/includes/savings_plan_list.html
+++ b/project/plans/templates/plans/includes/savings_plan_list.html
@@ -1,2 +1,2 @@
 {% load generic_list %}
-{% generic_list items 'plans:savings_plans_update' request.user.profile.year 'saving_type' %}
+{% generic_list items 'plans:savings_plan_update' request.user.profile.year 'saving_type' %}
