--- a/project/core/templates/core/includes/generic_form.html
+++ b/project/core/templates/core/includes/generic_form.html
@@ -1,4 +1,4 @@
-{% load crispy_forms_tags %}{% load static %}
+{% load crispy_forms_tags %}{% load static %}{% load l10n %}
 <form method="post" novalidate id="js-form" class="js-form" action="{{ url }}" data-action="{{ action }}" autocomplete="off" tabindex="-1" data-update-container="{{ update_container }}" {% if chained_dropdown %}data-chained-dropdown="{{ chained_dropdown }}"{% endif %}>
     {% csrf_token %}
     <script type="text/javascript" src="{% static 'js/moment-with-locales-2.9.0.min.js' %}"></script>
@@ -22,7 +22,7 @@
         {% for field in form %}
         <div class="row align-items-center">
             <div class="col-sm-4">{{ field.label_tag }}</div>
-            <div class="col-sm-8">{{ field|as_crispy_field }}</div>
+            <div class="col-sm-8">{% if field.name == 'year' %}{{ field|as_crispy_field|unlocalize }}{% else %}{{ field|as_crispy_field }}{% endif %}</div>
         </div>
         {% endfor %}
     </div>
