--- a/project/bookkeeping/templates/bookkeeping/month.html
+++ b/project/bookkeeping/templates/bookkeeping/month.html
@@ -14,13 +14,14 @@
     </div>
     <div class="col-md-6">
         <div class="row">
-            <div class="col-md-3 mx-0 px-2">
+            <div class="col-lg-3 mx-0 px-2">
                     {% include 'bookkeeping/includes/month_day_spending.html' %}
             </div>
-            <div class="col-md-9 pl-0">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores, itaque eaque quaerat ratione nulla nesciunt vero qui
-                tenetur quos placeat ullam facere non assumenda expedita consequatur illum, quam error. Id.
+            <div class="col-lg-9 pl-0">
                 <div class="row">
+                    <div class="col-lg-12">{% include 'bookkeeping/includes/chart_month_expenses.html' %}</div>
+                </div>
+                <div class="row mt-2">
                     <div class="col-lg-12">
                         {% include 'bookkeeping/includes/month_spending_info.html' %}
                         <button onclick="myFunction()">Click Me</button>
