--- a/project/bookkeeping/templates/bookkeeping/month.html
+++ b/project/bookkeeping/templates/bookkeeping/month.html
@@ -9,8 +9,8 @@
 
 <div class="row my-2">
     <div class="col-md-6 mr-0 pr-0 table-responsive">
-            <div id='table-visibility'>{% include 'bookkeeping/includes/month_balance.html' %}</div>
-            <div style="display: none;" id='chart-visibility'>CHART Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur officia voluptates quos, est ut, nostrum neque porro eum similique iste illo repellat. Repudiandae repellendus saepe sed? Illo, ab tempore! Facilis!</div>
+            <div style="display: none;" id='table-visibility'>{% include 'bookkeeping/includes/month_balance.html' %}</div>
+            <div id='chart-visibility'>{% include 'bookkeeping/includes/chart_target.html' %}</div>
     </div>
     <div class="col-md-6">
         <div class="row">
