--- a/project/bookkeeping/templates/bookkeeping/includes/chart_target.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/chart_target.html
@@ -46,6 +46,7 @@
             bar: {
                 grouping: false,
                 shadow: false,
+                pointWidth: 15,
             }
         },
         series: [{
