initially don't show savings chart

--- a/project/bookkeeping/templates/bookkeeping/includes/chart_balance.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/chart_balance.html
@@ -73,7 +73,8 @@
             type: 'spline',
             name: 'Taupymas',
             data: {{ s }},
-            color: '#ffc000'
+            color: '#ffc000',
+            visible: false,
         }]
     });
 </script>
