--- a/project/bookkeeping/templates/bookkeeping/month.html
+++ b/project/bookkeeping/templates/bookkeeping/month.html
@@ -9,8 +9,7 @@
 
 <div class="row my-2">
     <div class="col-md-6 mr-0 pr-0 table-responsive">
-            <div style="display: none;" id='table-visibility'>{% include 'bookkeeping/includes/month_balance.html' %}</div>
-            <div id='chart-visibility'>{% include 'bookkeeping/includes/chart_target.html' %}</div>
+            <div>{% include 'bookkeeping/includes/month_balance.html' %}</div>
     </div>
     <div class="col-md-6">
         <div class="row">
@@ -19,7 +18,8 @@
             </div>
             <div class="col-lg-9 pl-0">
                 <div class="row">
-                    <div class="col-lg-12">{% include 'bookkeeping/includes/chart_month_expenses.html' %}</div>
+                    <div style="display: none;" id='table-visibility' class="col-lg-12">{% include 'bookkeeping/includes/chart_month_expenses.html' %}</div>
+                    <div id='chart-visibility' class="col-lg-12">{% include 'bookkeeping/includes/chart_target.html' %}</div>
                 </div>
                 <div class="row mt-2">
                     <div class="col-lg-12">
