--- a/project/bookkeeping/templates/bookkeeping/month.html
+++ b/project/bookkeeping/templates/bookkeeping/month.html
@@ -9,7 +9,7 @@
 
 <div class="row my-2">
     <div class="col-md-6 mr-0 pr-0 table-responsive">
-            <div>{% include 'bookkeeping/includes/month_balance.html' %}</div>
+        {% include 'bookkeeping/includes/month_balance.html' %}
     </div>
     <div class="col-md-6">
         <div class="row">
